# docs/swagger.json
@@ -18,19 +18,24 @@
                 "summary": "get all appeals",
                 "parameters": [
                     {
-                        "minimum": 1,
+                        "type": "string",
+                        "example": "name",
+                        "name": "field",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "asc",
+                        "name": "order",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
-                        "default": 1,
-                        "description": "page",
                         "name": "page",
                         "in": "query"
                     },
                     {
-                        "maximum": 20,
-                        "minimum": 1,
                         "type": "integer",
-                        "default": 10,
-                        "description": "page",
                         "name": "page_size",
                         "in": "query"
                     }
@@ -116,6 +121,56 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/response.Appeal"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errorHandler.HttpErr"
+                        }
+                    }
+                }
+            }
+        },
+        "/appeal/my": {
+            "get": {
+                "description": "get my appeals",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "appeal"
+                ],
+                "summary": "get my appeals",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "name",
+                        "name": "field",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "asc",
+                        "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.AppealPaged"
                         }
                     },
                     "400": {
