# internal/app/model/input/Filter.go
@@ -1,6 +1,0 @@
-package input
-
-type Filter struct {
-	Page     int64 `form:"page"`
-	PageSize int64 `form:"page_size"`
-}
